--- a/ulmus/base/templates/base/base.html
+++ b/ulmus/base/templates/base/base.html
@@ -45,9 +45,9 @@
       <div class="container-fluid">
         <div class="row justify-content-center">
           <div class="col-xl-9 d-flex align-items-center justify-content-lg-between">
-            {% comment %} <h1 class="logo me-auto me-lg-0"><a href="{% page_url 'acceuil' as url %}" class="d-flex align-items-center"><img src="{% static 'img/logo.png' %}" alt="" class="img-fluid me-3" /><span>ULMUS</span></a></h1> {% endcomment %}
+            <h1 class="logo me-auto me-lg-0"><a href="{% page_url 'acceuil' as url %}" class="d-flex align-items-center"><img src="{% static 'img/logo.png' %}" alt="" class="img-fluid me-3" /><span>ULMUS</span></a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="{% page_url 'acceuil' as url %}" class="logo me-auto me-lg-0"><img src="{% static 'img/logo_1.png' %}" alt="Ulmus Technologie" class="img-fluid" /></a>
+            {% comment %} <a href="{% page_url 'acceuil' as url %}" class="logo me-auto me-lg-0"><img src="{% static 'img/logo_1.png' %}" alt="Ulmus Technologie" class="img-fluid" /></a> {% endcomment %}
             <!-- .navbar -->
             <nav id="navbar" class="navbar order-last order-lg-0">
               <ul>
@@ -67,7 +67,7 @@
               </ul>
               <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
-            <a href="#about" class="get-started-btn scrollto">Get Started</a>
+            <a href="#about" class="get-started-btn scrollto">Commencer</a>
           </div>
         </div>
       </div>
