Added about us section and about us list items plugins

--- a/ulmus/base/templates/base/index.html
+++ b/ulmus/base/templates/base/index.html
@@ -2,11 +2,11 @@
 {% load cms_tags menu_tags sekizai_tags static %}
 {% block content %}
   <!-- ======= Hero Section ======= -->
-    {% placeholder 'Hero Section' %}
+  {% placeholder 'Section héros' %}
   <!-- End Hero -->
 
   <!-- ======= About Us Section ======= -->
-  {% placeholder 'About Section' %}
+  {% placeholder 'Section A Propos' %}
   <!-- End About Us Section -->
 
   <!-- ======= Services Section ======= -->
