--- a/ulmus/base/templates/base/about_us_section.html
+++ b/ulmus/base/templates/base/about_us_section.html
@@ -18,7 +18,7 @@
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0">
         <p>{{ instance.description_3 }}</p>
-        <a href="#" class="btn-learn-more">Learn More</a>
+        <a href="#" class="btn-learn-more">En savoir plus</a>
       </div>
     </div>
   </div>
