--- a/ulmus/base/templates/base/base.html
+++ b/ulmus/base/templates/base/base.html
@@ -6,13 +6,13 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>{% page_attribute 'page_title' %}</title>
+    <title>Ulmus -{% page_attribute 'page_title' %}</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="{% static 'img/favicon.png' %}" rel="icon" />
-    <link href="{% static 'img/apple-touch-icon.png' %}" rel="apple-touch-icon" />
+    <link href="{% static 'img/logo.png' %}" rel="icon" />
+    <link href="{% static 'img/logo.png' %}" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet" />
@@ -28,13 +28,13 @@
     <!-- Template Main CSS File -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" />
 
-    <!--                  =======================================================
+    <!--                     =======================================================
   * Template Name: KnightOne
   * Template URL: https://bootstrapmade.com/knight-simple-one-page-bootstrap-template/
   * Updated: Mar 17 2024 with Bootstrap v5.3.3
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
-  ========================================================                  -->
+  ========================================================                     -->
     {% render_block 'css' %}
   </head>
 
@@ -80,7 +80,7 @@
 
       {% endblock %}
     </main>
-
+    <!-- End Content Block -->
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="container">
