--- a/ulmus/base/templates/base/CTA_section.html
+++ b/ulmus/base/templates/base/CTA_section.html
@@ -7,7 +7,7 @@
         <p>{{ instance.text }}</p>
       </div>
       <div class="col-lg-3 cta-btn-container text-center">
-        <a class="cta-btn align-middle" href="#">{{ instance.button_text }}</a>
+        <a class="cta-btn align-middle" href="{{ instance.button_link }}">{{ instance.button_text }}</a>
       </div>
     </div>
   </div>
