--- a/ulmus/base/templates/base/contact_section.html
+++ b/ulmus/base/templates/base/contact_section.html
@@ -36,31 +36,63 @@
       </div>
 
       <div class="col-lg-8 mt-5 mt-lg-0">
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+        <form id="contact-form" action="{% url "contact_request" %}" method="post" role="form" class="php-email-form" enctype="multipart/form-data">
+          {% csrf_token %}
           <div class="row">
-            <div class="col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required />
-            </div>
-            <div class="col-md-6 form-group mt-3 mt-md-0">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required />
-            </div>
+            <div class="col-md-6 form-group">{{ form.name }}</div>
+            <div class="col-md-6 form-group mt-3 mt-md-0">{{ form.email }}</div>
           </div>
-          <div class="form-group mt-3">
-            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required />
-          </div>
-          <div class="form-group mt-3">
-            <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-          </div>
+          <div class="form-group mt-3">{{ form.subject }}</div>
+          <div class="form-group mt-3">{{ form.message }}</div>
           <div class="my-3">
-            <div class="loading">Loading</div>
+            <div class="loading">Chargement</div>
             <div class="error-message"></div>
-            <div class="sent-message">Your message has been sent. Thank you!</div>
+            <div class="sent-message">Votre message a été envoyé, Merci!</div>
           </div>
           <div class="text-center">
-            <button type="submit">Send Message</button>
+            <button type="submit">Envoyez un message</button>
           </div>
         </form>
       </div>
     </div>
   </div>
 </section>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        document.getElementById("contact-form").addEventListener("submit", async function(event) {
+            event.preventDefault();
+            
+            var form = event.target;
+            var formData = new FormData(form);
+            
+            try {
+                const response = await fetch(form.action, {
+                    method: form.method,
+                    body: formData,
+                    headers: {
+                        'X-CSRFToken': form.querySelector('[name=csrfmiddlewaretoken]').value
+                    }
+                });
+
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+
+                const data = await response.json();
+
+                if (data.success) {
+                    document.querySelector(".sent-message").style.display = "block";
+                    document.querySelector(".error-message").style.display = "none";
+                    form.reset();
+                } else {
+                    document.querySelector(".error-message").innerText = JSON.stringify(data.errors);
+                    document.querySelector(".error-message").style.display = "block";
+                }
+            } catch (error) {
+                console.error('Error:', error);
+                document.querySelector(".error-message").innerText = 'An error occurred. Please try again later.';
+                document.querySelector(".error-message").style.display = "block";
+            }
+        });
+    });
+</script>
