ADded Counters Section plugin and plugin data

--- a/ulmus/base/templates/base/index.html
+++ b/ulmus/base/templates/base/index.html
@@ -13,9 +13,14 @@
   {% placeholder 'Section Services' %}
   <!-- End Services Section -->
 
+  <!-- ======= Counts Section ======= -->
+  {% placeholder 'Section Compteur' %}
+  <!-- End Counts Section -->
+
   <!-- ======= Cta Section ======= -->
   {% placeholder "Appel A l'action" %}
   <!-- End Cta Section -->
+   
   <!-- ======= Contact Section ======= -->
   {% placeholder 'Section Contact' %}
   <!-- End Contact Section -->
