--- a/ulmus/base/templates/base/base.html
+++ b/ulmus/base/templates/base/base.html
@@ -120,5 +120,6 @@
     <!-- Template Main JS File -->
     <script src="{% static 'js/main.js' %}"></script>
     {% render_block 'js' %}
+    <script src="{% static 'js/django-cms-helpers.js' %}"></script>
   </body>
 </html>
