--- a/ulmus/base/templates/base/index.html
+++ b/ulmus/base/templates/base/index.html
@@ -1,27 +1,5 @@
 {% extends 'base/base.html' %}
 {% load cms_tags menu_tags sekizai_tags static %}
 {% block content %}
-  <!-- ======= Hero Section ======= -->
-  {% placeholder 'Section Heros' %}
-  <!-- End Hero -->
-
-  <!-- ======= About Us Section ======= -->
-  {% placeholder 'Section A Propos' %}
-  <!-- End About Us Section -->
-
-  <!-- ======= Services Section ======= -->
-  {% placeholder 'Section Services' %}
-  <!-- End Services Section -->
-
-  <!-- ======= Counts Section ======= -->
-  {% placeholder 'Section Compteur' %}
-  <!-- End Counts Section -->
-
-  <!-- ======= Cta Section ======= -->
-  {% placeholder "Appel A l'action" %}
-  <!-- End Cta Section -->
-   
-  <!-- ======= Contact Section ======= -->
-  {% placeholder 'Section Contact' %}
-  <!-- End Contact Section -->
+  {% placeholder 'Contenu' %}
 {% endblock %}
