Adjusted template inheritance and layout, and other minor adjustments

--- a/ulmus/base/templates/base/contact_section.html
+++ b/ulmus/base/templates/base/contact_section.html
@@ -23,7 +23,7 @@
 
           <div class="email">
             <i class="ri-mail-line"></i>
-            <h4>Email :</h4>
+            <h4>E-mail :</h4>
             <p>{{ instance.company_email }}</p>
           </div>
 
