--- a/ulmus/base/templates/base/index.html
+++ b/ulmus/base/templates/base/index.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% load cms_tags menu_tags sekizai_tags static %}
 {% block content %}
+  {% include "base/navbar.html" %}
   {% placeholder 'Contenu' %}
 {% endblock %}
