modified navbar.html and navbar_cms.html to integrate DjangoCMS menu, along with minor changes to templates

--- a/ulmus/base/templates/base/base.html
+++ b/ulmus/base/templates/base/base.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
+{% load static cms_tags menu_tags sekizai_tags %}
 <html lang="en">
-  {% load cms_tags menu_tags sekizai_tags %}
-  {% load static %}
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Ulmus - {% page_attribute 'page_title' %}</title>
+    <title>Ulmus -{% page_attribute 'page_title' %}</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -28,13 +27,13 @@
     <!-- Template Main CSS File -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" />
 
-    <!--                      =======================================================
+    <!--                       =======================================================
   * Template Name: KnightOne
   * Template URL: https://bootstrapmade.com/knight-simple-one-page-bootstrap-template/
   * Updated: Mar 17 2024 with Bootstrap v5.3.3
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
-  ========================================================                      -->
+  ========================================================                       -->
     {% render_block 'css' %}
   </head>
 
