created services and contact pages + minor changes

--- a/ulmus/base/templates/base/blank_page.html
+++ b/ulmus/base/templates/base/blank_page.html
@@ -7,7 +7,7 @@
     <div class="container">
       <ol>
         <li>
-          <a href="{% page_url 'acceuil' as url %}">Acceuil</a>
+          <a href="{% page_url 'acceuil' as url %}">Ulmus</a>
         </li>
         <li>
           {% page_attribute 'page_title' %}
