minor changes to counter section and services section templates

--- a/ulmus/base/templates/base/counter_section.html
+++ b/ulmus/base/templates/base/counter_section.html
@@ -11,18 +11,18 @@
 
           <div class="col-lg-4 col-12 text-center">
             <span data-purecounter-start="0" data-purecounter-end="{{ instance.clients_max_counter }}" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Clients</p>
+            <p>Clients satisfaits</p>
           </div>
 
           <div class="col-lg-4 col-12 text-center">
             <span data-purecounter-start="0" data-purecounter-end="{{ instance.projects_max_counter }}" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Projets</p>
+            <p>Projets accomplies</p>
           </div>
 
 
           <div class="col-lg-4 col-12 text-center">
             <span data-purecounter-start="0" data-purecounter-end="{{ instance.workers_max_counter }}" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Hard Workers</p>
+            <p>Employés diligents</p>
           </div>
 
         </div>
