--- a/ulmus/base/templates/base/services_section.html
+++ b/ulmus/base/templates/base/services_section.html
@@ -2,9 +2,7 @@
 <section id="services" class="services">
   <div class="container">
     <div class="section-title">
-      {% if instance.child_plugin_instances %}
-        <h2><a href="{% page_url 2 %}">Services</a></h2>
-      {% endif %}
+      <h2>Services</h2>
       <p>{{ instance.description }}</p>
     </div>
     {% if instance.child_plugin_instances %}
