adjusted project structure

--- a/ulmus/base/templates/base/blank_page.html
+++ b/ulmus/base/templates/base/blank_page.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 {% load cms_tags menu_tags sekizai_tags static %}
 {% block content %}
-  {% show_menu 0 100 100 100 'base/navbar_cms.html' %}
+  {% show_menu 0 100 100 100 'base/components/navbar_cms.html' %}
   <!-- ======= Breadcrumbs ======= -->
   <section id="breadcrumbs" class="breadcrumbs">
     <div class="container">
