--- a/ulmus/base/templates/base/index.html
+++ b/ulmus/base/templates/base/index.html
@@ -2,6 +2,6 @@
 {% load cms_tags menu_tags sekizai_tags static %}
 {% block content %}
   {% comment %} {% include "base/navbar.html" %} {% endcomment %}
-  {% show_menu 0 100 100 100 'base/navbar.html' %}
+  {% show_menu 0 100 100 100 'base/components/navbar.html' %}
   {% placeholder 'Contenu' %}
 {% endblock %}
