minor changes in html and css, uploaded images

--- a/ulmus/base/templates/base/sections/hero_section.html
+++ b/ulmus/base/templates/base/sections/hero_section.html
@@ -3,6 +3,6 @@
   <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
     <h1>{{ instance.title }}</h1>
     <h2>{{ instance.subtitle }}</h2>
-    <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a>
+    {% comment %} <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a> {% endcomment %}
   </div>
 </section>
