--- a/ulmus/base/templates/base/sections/about_us_section.html
+++ b/ulmus/base/templates/base/sections/about_us_section.html
@@ -20,7 +20,7 @@
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0">
         <p>{{ instance.description_3 }}</p>
-        <a href="#" class="btn-learn-more">En savoir plus</a>
+        <a href="#contact" class="btn-learn-more">Contactez-Nous</a>
       </div>
     </div>
   </div>
