--- a/ulmus/base/templates/base/sections/counter_section.html
+++ b/ulmus/base/templates/base/sections/counter_section.html
@@ -3,7 +3,7 @@
       <div class="container">
 
         <div class="text-center title">
-          <h3>{{ instance.description }}</h3>
+          <h3>{{ instance.title }}</h3>
           <p>{{ instance.description }}</p>
         </div>
 
