--- a/ulmus/base/templates/base/base.html
+++ b/ulmus/base/templates/base/base.html
@@ -58,7 +58,7 @@
           <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
         <div class="copyright">
-          &copy; Copyright <strong><span>Ulmus Technologie</span></strong>. Tous droits réservés.
+          <span class="text-green fs-5">&copy;</span> Copyright <strong><span class="text-green">Ulmus Technologie</span></strong>. Tous droits réservés.
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
